dask/k8s_manifests/dask_scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dask-scheduler
  name: dask-scheduler
  namespace: kubeflow-user
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  selector:
    matchLabels:
      app: dask-scheduler
      component: scheduler
  replicas: 1
  template:
    metadata:
      labels:
        app: dask-scheduler
        component: scheduler
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccount: default-editor
      # imagePullSecrets:
      # - name: docker-registry-pull-secret #name of the secret
      nodeSelector: {}
      securityContext: {}
      affinity: {}
      tolerations: []
      containers:
      - name: dask-scheduler
        imagePullPolicy: Always
        image: registry.hub.docker.com/daskdev/dask:2021.11.2-py3.9 #name of the image
        args:
          - dask-scheduler
          - --port
          - "8786"
          - --bokeh-port
          - "8787"
        ports:
          - containerPort: 8786
          - containerPort: 8787
        resources:
          limits:
            cpu: "2"
            memory: 1G
          requests:
            cpu: "2"
            memory: 1G
---
apiVersion: v1
kind: Service
metadata:
  name: dask-scheduler
  namespace: kubeflow-user
  labels:
    app: dask-scheduler
    component: scheduler
spec:
  ports:
    - name: dask-scheduler
      protocol: TCP
      port: 8786
  selector:
    app: dask-scheduler
    component: scheduler
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: add-header
  namespace: kubeflow-user
spec:
  configPatches:
  - applyTo: VIRTUAL_HOST
    match:
      context: SIDECAR_OUTBOUND
      routeConfiguration:
        vhost:
          name: dask-scheduler.kubeflow-user.svc.cluster.local:8786
          route:
            name: default
    patch:
      operation: MERGE
      value:
        request_headers_to_add:
        - append: true
          header:
            key: kubeflow-userid
            value: kubeflow-user
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dask-scheduler
    component: scheduler
  name: dask-scheduler-ui
  namespace: kubeflow-user
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8787
  selector:
    app: dask-scheduler
    component: scheduler
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dask-scheduler
  namespace: kubeflow-user
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /apps/kubeflow-user/dask/
    rewrite:
      uri: /
    route:
    - destination:
        host: dask-scheduler-ui.kubeflow-user.svc.cluster.local
        port:
          number: 80
    timeout: 300s
